--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
+      - name: update system dependencies
+        run: sudo apt update && sudo apt upgrade
+        
       - name: install xmake
         run: bash <(curl -fsSL https://xmake.io/shget.text)
       
