ci: updating ci conf

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -17,10 +17,7 @@ jobs:
       matrix:
         os: [macos-13]
         arch: [x86_64]
-        confs:
-        - { mode: debug }
-        - { mode: release }
-        - { mode: releasedbg }
+        confs: [debug, release, releasedbg]
 
     steps:
     - name: Update clang to 17
@@ -57,7 +54,7 @@ jobs:
         key: macOS-${{ matrix.arch }}-${{ matrix.confs.mode }}-${{ steps.dep_hash.outputs.hash }}-W${{ steps.cache_key.outputs.key }}
 
     - name: Configure xmake and install dependencies
-      run: xmake config --arch=${{ matrix.arch }} --mode=${{ matrix.confs.mode }} ${{ matrix.confs.config }} --unit-test=y --yes --cc=/usr/local/opt/llvm@17/bin/clang --cxx=/usr/local/opt/llvm@17/bin/clang++
+      run: xmake config --arch=${{ matrix.arch }} --mode=${{ matrix.confs.mode }} --unit-test=y --yes --cc=/usr/local/opt/llvm@17/bin/clang --cxx=/usr/local/opt/llvm@17/bin/clang++
 
     - name: Save cached xmake dependencies
       if: ${{ !steps.restore-depcache.outputs.cache-hit }}
